client/media/css/global.css
/* ... */
.ie .action:hover, a:hover.action,
.ie .action:focus, a:focus.action {
	background-color: #fafafa;
}
  
.action:active, a:active.action {
	color: #555;
	background-color: #ccc;
	text-shadow: none;
	background-image:
	url(../images/sprites.png),
	-webkit-gradient(
		linear, left bottom, left top, from(#bbb), to(#ccc)
	);
	background-image:
	url(../images/sprites.png),
	 -moz-linear-gradient(
		90deg, #fefefe, #fff
	);
	background-image:
	url(../images/sprites.png),
	-webkit-linear-gradient(
		90deg, #fefefe, #fff
	);
	background-image:
	url(../images/sprites.png),
	linear-gradient(
		90deg, #fafafa, #fff
	);
	border: 1px solid #a3a3a3;
	-webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
	-ms-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
	-o-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
	box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
}

.ie .action:active, a:active.action {
	background-color: #fefefe;
}

a.action.edit,
.action.delete,
.action.close,
a.action.locate {
	display: inline-block;
	text-indent: -999em;
	padding: 0;
	width: 17px;
	height: 17px;
	min-height: 17px;
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
	-o-box-sizing: content-box;
	box-sizing: content-box;
}

a.action.edit {
	background-position: 3px -88px, 0 0;
}

.ie a.action.edit {
	background-position: 3px -88px;
}

.action.close, .action.delete {
	background-position: 4px -116px;
	background-position: 4px -116px, 0 0;
}

.ie .action.close,
.ie .action.delete {
	background-position: 4px -116px;
}

a.action.locate {
	position: relative;
	top: 1px;
	width: 23px;
	height: 23px;
	background-position: 2px -178px, 0 0;
}

.ie a.action.locate {
	background-position: 2px -178px;
}

/* Tank task & hub controls */

.admin-actions {
	float: right;
}

.admin-actions a {
	display: inline-block;
	width: 16px;
	height: 16px;
	background: url(../images/sprites.png?a) 0 -480px;
	text-indent: -900em;
	opacity: 0;
	-webkit-transition: opacity 0.15s ease-in;
	-moz-transition: opacity 0.15s ease-in;
	-ms-transition: opacity 0.15s ease-in;
	-o-transition: opacity 0.15s ease-in;
	transition: opacity 0.15s ease-in;
}

/* .select hgroup .admin-actions a,

    To be worked into touch support in future. See tickets #180 and #224.
*/ 
:hover > .admin-actions a {
	opacity: 0.7;
}

.admin-actions a.add {
	background-position: 0 -420px;
}

.admin-actions a:hover {
	border: none;
	opacity: 1;
}

.task .admin-actions a.edit {
	background-position: 0 -390px;
}

a.readmore {
	white-space:nowrap;
}



/* List reset */

nav ul,
form ul,
.listing {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

/* @end */

/* @group Content Elements
-----------------------------------------------------------------------------*/

.content h1,
.content h2,
.content h3 {
	font-weight: bold;
	font-size: 1.384em /* 18px */;
	/* Pull the bottom border in line with the close button */
	margin: 1.538em /* 20px */ -0.679em /* 10px */ 1.538em /* 20px */ 0;
	padding-bottom: 0.679em /* 10px */;
	border-bottom: 1px solid #ccc;
}

.content h1 {
	margin-top: 0;
}

.content h2 {
	font-size: 1.231em /* 16px */;
}

.content h3 {
	font-size: 1.077em /* 14px */;
	border: none;
}

.content strong {
	font-weight: bold;
}

.content em,
.content blockquote {
	font-style: italic;
}

.content blockquote {
	padding-left: 0.615em /* 8px */;
	margin-left: -0.615em /* -8px */;
	border-left: 1px solid #ccc;
}

.content code {
	font-family: monospace;
}

.content form {
	width: 23.077em /* 300px */;
	max-width: 100%;
}

.content form li {
	margin-bottom: 0.769em /* 10px */;
}

.content form .error strong, .content form strong.warning {
	color: #ce0300;
}
.content form .note {
	color: #777;
}

.content form .error input,
.content form .error textarea,
.content form input:invalid,
.content form textarea:invalid	{
	background-color: rgb(255, 234, 239);
	border-color: rgb(255, 188, 192);
	color: rgb(184, 26, 26);
}

.content form label,
.content form input,
.content form textarea {
	display: block;
}

.content form label {
	font-weight: bold;
	line-height: 1.5;
}

.content form input,
.content form textarea,
.content form select {
	border: 1px solid #ccc;
	padding: 0.461em /* 4px */;
	font-size: 1em /* 13px */;
	width: 22.307em /* 290px */;
	max-width: 100%;
}

.content form textarea {
	/* Fixes an issue in FF where the font size is reset */
	font: 13px/1.6em Arial, "Helvetica Neue", Helvetica, Geneva, sans-serif;
}

.content form select {
	width: 23.077em /* 300px */;
}

.content form .actions {
	text-align: right;
	position: relative;
}

.content form .actions .note {
	text-align: left;
	position: absolute;
	top: 0;
	margin: 0;
	line-height: 2.153em /* 28px */;
}

.content form .actions .note a.delete {
	font-weight: bold;
	color: #C92D2D;
}

/* @end */

/* @group Header
-----------------------------------------------------------------------------*/

.header-container {
	z-index: 999999;
	position: absolute;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	padding: 0 20px;
	background-color: #333;
	background-image: -webkit-gradient(
		linear, left bottom, left top, from(#101010), to(#323232)
	);
	background-image: -moz-linear-gradient(
		90deg, #101010, #323232
	);
	background-image: -webkit-linear-gradient(
		90deg, #101010, #323232
	);
	background-image: linear-gradient(
		90deg, #101010, #323232
	);
	-webkit-box-shadow: 0 0 3px #000;
	-moz-box-shadow: 0 0 3px #000;
	-ms-box-shadow: 0 0 3px #000;
	-o-box-shadow: 0 0 3px #000;
	box-shadow: 0 0 3px #000;
}

.header-container header {
	width: 100%;
	overflow: hidden;
	margin: 0 auto;
	position: relative;
	line-height: 3.077em /* 40px */;
}

.header-container h1,
.header-container h2,
.header-container h3,
.header-container nav,
.header-container nav ul,
.header-container nav li,
.header-container div,
.header-container dl,
.header-container dt,
.header-container dd {
	display: inline-block;
	margin: 0;
	text-shadow: 0 1px 0 #000;
}
/* ... */

